Show guide if linked to 2025 policies, fix z-index of filter hint

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -251,7 +251,7 @@
   top: -85px;
   left: 290px;
   right: 0;
-  z-index: -1;
+  z-index: 1;
 
   text-indent: -9999em;
   height: 90px;
